--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
+aiosqlite==0.21.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.11.0
@@ -8,11 +9,15 @@ appnope==0.1.4
 asttokens==3.0.1
 attrs==25.4.0
 backoff==2.2.1
+banks==2.2.0
+beautifulsoup4==4.14.3
 blinker==1.9.0
 cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+cohere==5.20.0
+colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -20,10 +25,15 @@ dataclasses-json==0.6.7
 datasets==4.4.1
 debugpy==1.8.17
 decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
 dill==0.4.0
+dirtyjson==1.0.8
 distro==1.9.0
+eval_type_backport==0.3.0
 executing==2.2.1
 faiss-cpu==1.13.0
+fastavro==1.12.1
 fastjsonschema==2.21.2
 filelock==3.20.0
 filetype==1.2.0
@@ -37,6 +47,8 @@ google-api-core==2.28.1
 google-auth==2.43.0
 google-genai==1.52.0
 googleapis-common-protos==1.72.0
+greenlet==3.2.4
+griffe==1.15.0
 grpcio==1.76.0
 grpcio-status==1.76.0
 h11==0.16.0
@@ -45,11 +57,12 @@ hf-xet==1.2.0
 hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
-httpx-sse==0.4.3
+httpx-sse==0.4.0
 huggingface-hub==0.36.0
 hyperframe==6.1.0
 idna==3.11
 importlib_metadata==8.7.0
+invoke==2.2.1
 ipykernel==7.1.0
 ipython==9.7.0
 ipython_pygments_lexers==1.1.1
@@ -79,10 +92,24 @@ langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.10
 langsmith==0.4.48
+llama-cloud==0.1.35
+llama-cloud-services==0.6.54
+llama-index==0.14.8
+llama-index-cli==0.5.3
+llama-index-core==0.14.8
+llama-index-embeddings-openai==0.5.1
+llama-index-indices-managed-llama-cloud==0.9.4
+llama-index-instrumentation==0.4.2
+llama-index-llms-openai==0.6.10
+llama-index-readers-file==0.5.5
+llama-index-readers-llama-parse==0.5.1
+llama-index-workflows==2.11.5
+llama-parse==0.6.54
 MarkupSafe==3.0.3
 marshmallow==3.26.1
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
+mistralai==1.9.11
 mpmath==1.3.0
 multidict==6.7.0
 multiprocess==0.70.18
@@ -91,6 +118,7 @@ narwhals==2.12.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.6
+nltk==3.9.2
 numpy==2.3.5
 openai==2.8.1
 opentelemetry-api==1.38.0
@@ -102,7 +130,7 @@ opentelemetry-semantic-conventions==0.59b0
 orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
-pandas==2.3.3
+pandas==2.2.3
 parso==0.8.5
 pexpect==4.9.0
 pillow==12.0.0
@@ -147,12 +175,15 @@ setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.44
 stack-data==0.6.3
 streamlit==1.51.0
+striprtf==0.0.26
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tiktoken==0.12.0
 tokenizers==0.22.1
 toml==0.10.2
 torch==2.9.1
@@ -160,6 +191,7 @@ tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.57.3
+types-requests==2.32.4.20250913
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
