--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.12.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
@@ -5,19 +6,26 @@ aiosqlite==0.21.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.11.0
+appdirs==1.4.4
 appnope==0.1.4
 asttokens==3.0.1
 attrs==25.4.0
+av==16.0.1
 backoff==2.2.1
 banks==2.2.0
 beautifulsoup4==4.14.3
 blinker==1.9.0
+Bottleneck==1.6.0
+Byaldi==0.0.7
 cachetools==6.2.2
+catalogue==2.0.10
 certifi==2025.11.12
+cfgv==3.5.0
 charset-normalizer==3.4.4
 click==8.3.1
 cohere==5.20.0
 colorama==0.4.6
+colpali_engine==0.3.13
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -29,7 +37,10 @@ defusedxml==0.7.1
 Deprecated==1.2.18
 dill==0.4.0
 dirtyjson==1.0.8
+diskcache==5.6.3
+distlib==0.4.0
 distro==1.9.0
+docstring_parser==0.17.0
 eval_type_backport==0.3.0
 executing==2.2.1
 faiss-cpu==1.13.0
@@ -45,10 +56,18 @@ GitPython==3.1.45
 google-ai-generativelanguage==0.9.0
 google-api-core==2.28.1
 google-auth==2.43.0
+google-cloud-aiplatform==1.128.0
+google-cloud-bigquery==3.38.0
+google-cloud-core==2.5.0
+google-cloud-resource-manager==1.15.0
+google-cloud-storage==3.6.0
+google-crc32c==1.7.1
 google-genai==1.52.0
+google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
 greenlet==3.2.4
 griffe==1.15.0
+grpc-google-iam-v1==0.14.3
 grpcio==1.76.0
 grpcio-status==1.76.0
 h11==0.16.0
@@ -60,8 +79,10 @@ httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.36.0
 hyperframe==6.1.0
+identify==2.6.15
 idna==3.11
 importlib_metadata==8.7.0
+instructor==1.13.0
 invoke==2.2.1
 ipykernel==7.1.0
 ipython==9.7.0
@@ -69,8 +90,9 @@ ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.8
 jedi==0.19.2
 Jinja2==3.1.6
-jiter==0.12.0
+jiter==0.11.1
 joblib==1.5.2
+jsonlines==4.0.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
@@ -84,7 +106,9 @@ langchain-classic==1.0.0
 langchain-community==0.4.1
 langchain-core==1.1.0
 langchain-google-genai==3.2.0
+langchain-google-vertexai==3.1.0
 langchain-huggingface==1.1.0
+langchain-openai==1.1.0
 langchain-text-splitters==1.0.0
 langfuse==3.10.1
 langgraph==1.0.4
@@ -105,12 +129,16 @@ llama-index-readers-file==0.5.5
 llama-index-readers-llama-parse==0.5.1
 llama-index-workflows==2.11.5
 llama-parse==0.6.54
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 marshmallow==3.26.1
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
+mdurl==0.1.2
 mistralai==1.9.11
+ml_dtypes==0.5.4
 mpmath==1.3.0
+mteb==1.6.35
 multidict==6.7.0
 multiprocess==0.70.18
 mypy_extensions==1.1.0
@@ -118,7 +146,10 @@ narwhals==2.12.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.6
+ninja==1.13.0
 nltk==3.9.2
+nodeenv==1.9.1
+numexpr==2.14.1
 numpy==2.3.5
 openai==2.8.1
 opentelemetry-api==1.38.0
@@ -132,11 +163,15 @@ ormsgpack==1.12.0
 packaging==25.0
 pandas==2.2.3
 parso==0.8.5
+pdf2image==1.17.0
+peft==0.17.1
 pexpect==4.9.0
 pillow==12.0.0
 platformdirs==4.5.0
 plotly==6.5.0
+poppler-utils==0.1.0
 portalocker==3.2.0
+pre_commit==4.5.0
 prompt_toolkit==3.0.52
 propcache==0.4.1
 proto-plus==1.26.1
@@ -157,26 +192,35 @@ pypdf==6.4.0
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytrec_eval-terrier==0.5.10
 pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
 qdrant-client==1.16.1
+qwen-vl-utils==0.0.14
+ragas==0.3.9
+rank-bm25==0.2.2
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+rich==14.2.0
 rpds-py==0.29.0
 rsa==4.9.1
 safetensors==0.7.0
 scikit-learn==1.7.2
+scikit-network==0.33.5
 scipy==1.16.3
 sentence-transformers==5.1.2
 setuptools==80.9.0
+shapely==2.1.2
+shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.44
+srsly==2.5.2
 stack-data==0.6.3
 streamlit==1.51.0
 striprtf==0.0.26
@@ -186,17 +230,22 @@ threadpoolctl==3.6.0
 tiktoken==0.12.0
 tokenizers==0.22.1
 toml==0.10.2
-torch==2.9.1
+torch==2.8.0
+torchvision==0.23.0
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.57.3
+ty==0.0.1a29
+typer==0.20.0
 types-requests==2.32.4.20250913
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+validators==0.35.0
+virtualenv==20.35.4
 wcwidth==0.2.14
 websockets==15.0.1
 widgetsnbextension==4.0.15
